# coverage-space

./: .gitignore  .pep8rc  .project  .pydevproject  .pylint.ini  .pylintrc  .tool-versions  .travis.yml  .verchew.ini  404.html  CHANGELOG.md  CHANGES.md  CNAME  Makefile  Pipfile  README.md  app.json  circle.yml  index.html  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  runtime.txt  scent.py  setup.py  sitemap.xml
.circleci/: config.yml
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
api/: __init__.py  app.py  index.html  settings.py
api/models/: __init__.py  metrics.py  project.py
api/routes/: _common.py  project.py  root.py
api/templates/: base.html
api/test/: __init__.py  test_models_metrics.py  test_models_project.py
api/tests/: conftest.py  test_app.py  test_models_project.py  test_settings.py
api/views/: __init__.py  _common.py  _schemas.py  _utils.py  project.py  root.py  theme.py
client/: index.html
coveragespace/: __init__.py  app.py
coveragespace/cli/: base.py  main.py
coveragespace/models/: project.py
coveragespace/routes/: __init__.py  _common.py  _schemas.py  project.py  projects.py  root.py
coveragespace/test/: test_app.py  test_cli_plugins.py  test_models_project.py  test_settings.py  test_site.py
docs/: api.md  client.md  index.md
requirements/: ci.txt  dev.txt
search/: search_index.json
tests/: __init__.py  conftest.py  fixtures.py  test_all.py  test_routes_project.py  test_routes_projects.py  test_routes_root.py  test_views_project.py  test_views_root.py
(+13 files in other folders)
