[tool.poetry]

name = "coverage-space"
version = "1.1"
description = "A place to track your code coverage metrics."

license = "MIT"
authors = ["Jace Browning <jacebrowning@gmail.com>"]

packages = [{ include = "api" }]

[tool.poetry.dependencies]

python = "3.8.15"

Flask = "~=1.1"
Flask-API = "~=2.0"
webargs = "~=5.5.3"
marshmallow = "~=2.15.4"
requests = "~=2.23.0"
HTTPie = "~=1.0.3"
sh = "~=1.12.14"
YORM = "~=1.6.2"
minilog = "*"
Flask-Script = "~=2.0.6"
gunicorn = "~=19.7.1"

[tool.poetry.dev-dependencies]

pylint = "*"
pycodestyle = "*"
pydocstyle = "*"
pytest = "~=4.6"
pytest-describe = "*"
pytest-expecter = "*"
pytest-randomly = "*"
pytest-cov = "*"
freezegun = "*"
coveragespace = "~=4.0"
honcho = "*"
splinter = "*"
